Update Invoice List and Details, Delivery Notes view
